# nmr

./: README.md  pyproject.toml
data/: .gitignore
data/results/: df_result_linear.parquet  df_result_numerai_lgb.parquet  parameters_dict.pkl  parameters_list.pkl  selected_features.pkl  study.pkl  study_cb.pkl  study_lgb.pkl  study_xgb.pkl
src/data/: data_pipeline.py  download_data.py  split_data.py
src/model_training/: train_models_for_ensembling.py
src/notebooks/: benchmarks_and_mmc_approximation.ipynb  compare_frameworks.ipynb  feature_selection.ipynb  meta_model_performance_approximation.ipynb  mmc_stability_and_approximation.ipynb  performance_over_time.ipynb  ranking_vs_regression.ipynb  test_feature_neutralisation.ipynb  train_ensemble.ipynb  tune_hyperparameters.ipynb  tune_hyperparameters_cb.ipynb  tune_hyperparameters_lgb.ipynb  tune_hyperparameters_xgb.ipynb
src/submission/: README.md  numerai_requirements.txt  prepare_lgb_submission.py  prepare_lgb_submission_without_neutralisation.py  prepare_xgb_submission.py  train_lgb_models_for_submission.py  train_models_for_submission.py  train_xgb_models_for_submission.py
src/util/: common.py  constants.py
