[project]
name = "nmr"
version = "0.1.0"
description = "Develop models for the Numerai tournament"
authors = [
    {name = "jonas-send",email = "datascience@jonassend.com"}
]
readme = "README.md"
requires-python = ">= 3.12"
dependencies = [
    "polars (>=1.30.0,<2.0.0)",
    "numerapi (>=2.20.6,<3.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "numpy (>=2.3.0,<3.0.0)",
    "optuna (>=4.3.0,<5.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)"
]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
