[project]
name = "nmr"
version = "0.1.0"
description = "Develop models for the Numerai tournament"
authors = [
    {name = "jonas-send",email = "datascience@jonassend.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
# from Numerai's requirements.txt
dependencies = [
    "polars>=1.31.0,<2.0.0",
    "numerapi>=2.20.7,<3.0.0",
    "tqdm>=4.67.1,<5.0.0",
    "numpy (>=2.0.0,<3.0.0)",
    "optuna (>=4.3.0,<5.0.0)",
    "scikit-learn>=1.6.1,<1.7.0",
    "notebook (>=7.4.3,<8.0.0)",
    "matplotlib>=3.10.3,<4.0.0",
    "seaborn (>=0.13.2,<0.14.0)",
    "plotly>=6.2.0,<7.0.0",
    "cloudpickle>=3.1.1,<4.0.0",
    "catboost (==1.2.8)",
    "xgboost (==3.0.2)",
    "lightgbm[gpu] (>=4.6.0,<5.0.0)",
    "pyarrow (>=22.0.0,<23.0.0)",
]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.13"

[tool.ruff]
lint.select = [
    "RET504",  # unnecessary assignment
    "ANN001",  # missing type annotation for function argument
    "ANN201",  # missing return type annotation for public function
    "D103",  # missing docstring in public function
    "PLR2044",  # line with empty comment
    "W292",  # no newline at end of file
]

